Create Fuzzy class

--- a/zadanie_rozmyte/zadanie_rozmyte.csproj
+++ b/zadanie_rozmyte/zadanie_rozmyte.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
