--- a/zadanie_rozmyte/zadanie_rozmyte.csproj
+++ b/zadanie_rozmyte/zadanie_rozmyte.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
-    <StartupObject></StartupObject>
+    <StartupObject>zadanie_rozmyte.App</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
