--- a/zadanie_rozmyte/zadanie_rozmyte.csproj
+++ b/zadanie_rozmyte/zadanie_rozmyte.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1000" />
     <PackageReference Include="Spire.XLS" Version="10.12.0" />
+    <PackageReference Include="Syncfusion.SfChart.WPF" Version="18.4.0.35" />
     <PackageReference Include="System.Windows.Controls.DataVisualization.Toolkit" Version="4.0.0" />
     <PackageReference Include="System.Windows.Forms.DataVisualization" Version="1.0.0-prerelease.20110.1" />
   </ItemGroup>
